--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "emoji-picker-react": "^4.12.2",
     "jotai": "^2.12.3",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
+    "next": "^14.2.3",
     "next-themes": "^0.4.6",
     "nuqs": "^1.17.8",
     "quill": "^2.0.3",
