--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jotai": "^2.12.3",
     "lucide-react": "^0.503.0",
     "next": "^14.2.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "nuqs": "^1.17.8",
     "quill": "^2.0.3",
